--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -27,6 +28,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-otp-input": "^3.1.1",
     "react-pdf": "^7.4.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
